ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ingress-conduktor
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: conduktor.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka-conduktor-service
            port:
              number: 80
